# spreadsheet_ai_arena

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: agent.py  conversation.py
configs/: registry.json
configs/datasets/: spreadsheetbench_912.json
spreadsheet_arena/: cli.py
spreadsheet_arena/datasets/: checkout.py  layout.py  registry.py  tasks.py  utils.py
spreadsheet_arena/datasets/adapters/: git.py  transforms.py
spreadsheet_arena/mcp/: server.py
spreadsheet_arena/mcp/tools/: task_queue.py
